--- a/templates/cs/navigation.html
+++ b/templates/cs/navigation.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container">
-    <a href="/" class="navbar-brand d-flex mr-auto"><img width="174" height="30" class="d-inline-block align-top"
-      src="/assets/images/logo.png" alt="Otevřená data"></a>
+    <a href="/" class="navbar-brand d-flex mr-auto">
+      <img width="174" height="30" class="d-inline-block align-top" src="/assets/images/logo.png" alt="Otevřená data">
+    </a>
     <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse"
       data-bs-target="#collapsingNavbar" aria-controls="collapsingNavbar" aria-expanded="false"
       aria-label="Zobrazení navigace">
@@ -31,8 +32,7 @@
             <a class="dropdown-item" href="/poskytovatel%C3%A9">Poskytovatelé</a>
             <a class="dropdown-item" href="/kl%C3%AD%C4%8Dov%C3%A1-slova">Klíčová slova</a>
             <a class="dropdown-item" href="/lok%C3%A1ln%C3%AD-katalogy">Lokální katalogy</a>
-            <a class="dropdown-item"
-              href="https://docs.google.com/forms/d/e/1FAIpQLSdUaVaCITtmHdTGxsU5xPvdzIygOA7wHHaotPRPAbglCF3mpw/viewform">Podnět
+            <a class="dropdown-item" href="https://docs.google.com/forms/d/e/1FAIpQLSdUaVaCITtmHdTGxsU5xPvdzIygOA7wHHaotPRPAbglCF3mpw/viewform">Podnět
               na data k otevření</a>
           </div>
         </li>
@@ -55,7 +55,7 @@
             <img src="/assets/images/flag-cs.svg" alt="Čeština" style="width: 1.3rem;">
           </a>
           <div tabindex="-1" aria-hidden="true" role="menu" class="language-drop-down dropdown-menu lang-menu">
-            <a href="/english/" class="en dropdown-item" title="English">
+            <a href="{{navigation.en}}" class="en dropdown-item" title="English">
               <img src="/assets/images/flag-en.svg" alt="English" style="width: 1.3rem;"></a>
           </div>
         </li>
