--- a/templates/en/application-list.html
+++ b/templates/en/application-list.html
@@ -58,7 +58,7 @@
         <div class="m-md-1">
           <div class="row">
             <div class="col-12 col-md-9">
-              <h4>Nalezeno {{applications.count}} aplikací.</h4>
+              <h4>{{message.found}}</h4>
             </div>
           </div>
           <div>
