Update for deployment
Add language to API, update path to assets, improve error handling for datasets.

--- a/templates/cs/application-list.html
+++ b/templates/cs/application-list.html
@@ -87,7 +87,7 @@
     </div>
   </div>
 
-  <script src="./assets/js/application-list.js"></script>
+  <script src="/aplikace/assets/js/application-list.js"></script>
   {{> footer }}
 </body>
 
