--- a/templates/en/footer.html
+++ b/templates/en/footer.html
@@ -73,7 +73,7 @@
                 </p>
                 <div class="bg-white shadow">
                     <img alt="Czech Recovery Plan" class="d-inline-block align-top img-fluid pr-2" id="npologo"
-                        src="/assets/images/npo_en.webp" width="300">
+                        src="/aplikace/assets/images/npo_en.webp" width="300">
                 </div>
             </div>
         </div>
