--- a/templates/cs/navigation.html
+++ b/templates/cs/navigation.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container">
     <a href="/" class="navbar-brand d-flex mr-auto">
-      <img width="174" height="30" class="d-inline-block align-top" src="/assets/images/logo.png" alt="Otevřená data">
+      <img width="174" height="30" class="d-inline-block align-top" src="/aplikace/assets/images/logo.png" alt="Otevřená data">
     </a>
     <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse"
       data-bs-target="#collapsingNavbar" aria-controls="collapsingNavbar" aria-expanded="false"
@@ -52,11 +52,11 @@
 
         <li class="nav-item dropdown">
           <a data-bs-toggle="dropdown" aria-haspopup="true" href="#" class="dropdown-toggle nav-link" aria-expanded="false">
-            <img src="/assets/images/flag-cs.svg" alt="Čeština" style="width: 1.3rem;">
+            <img src="/aplikace/assets/images/flag-cs.svg" alt="Čeština" style="width: 1.3rem;">
           </a>
           <div tabindex="-1" aria-hidden="true" role="menu" class="language-drop-down dropdown-menu lang-menu">
             <a href="{{navigation.en}}" class="en dropdown-item" title="English">
-              <img src="/assets/images/flag-en.svg" alt="English" style="width: 1.3rem;"></a>
+              <img src="/aplikace/assets/images/flag-en.svg" alt="English" style="width: 1.3rem;"></a>
           </div>
         </li>
 
