--- a/templates/en/application-list.html
+++ b/templates/en/application-list.html
@@ -87,7 +87,7 @@
     </div>
   </div>
 
-  <script src="./assets/js/application-list.js"></script>
+  <script src="/aplikace/assets/js/application-list.js"></script>
   {{> footer }}
 </body>
 
