--- a/templates/head.html
+++ b/templates/head.html
@@ -25,4 +25,4 @@
   href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 <!-- Local resources. -->
-<link type="text/css" rel="stylesheet" href="/assets/css/main.css">
+<link type="text/css" rel="stylesheet" href="/aplikace/assets/css/main.css">
