--- a/templates/en/application-list.html
+++ b/templates/en/application-list.html
@@ -49,7 +49,7 @@
                 </div>
               </div>
               <button type="submit" class="btn btn-primary">
-                Vyhledat
+                Search
               </button>
             </div>
           </form>
