Translate of application detail

--- a/templates/en/application-detail.html
+++ b/templates/en/application-detail.html
@@ -22,7 +22,7 @@
     <div class="row">
       <div class="col-12 col-sm-6 col-md-3">
         <dl>
-          <dt>Stav</dt>
+          <dt>State</dt>
           {{#each state}}
           <dd>
             <a href="{{href}}">
@@ -37,7 +37,7 @@
       </div>
       <div class="col-12 col-sm-6 col-md-3">
         <dl>
-          <dt>Téma</dt>
+          <dt>Theme</dt>
           {{#each theme}}
           <dd>
             <a href="{{href}}">
@@ -52,7 +52,7 @@
       </div>
       <div class="col-12 col-sm-6 col-md-3">
         <dl>
-          <dt>Platforma</dt>
+          <dt>Platform</dt>
           {{#each platform}}
           <dd>
             <a href="{{href}}">
@@ -67,7 +67,7 @@
       </div>
       <div class="col-12 col-sm-6 col-md-3">
         <dl>
-          <dt>Typ</dt>
+          <dt>Type</dt>
           {{#each type}}
           <dd>
             <a href="{{href}}">
@@ -83,7 +83,7 @@
     </div>
     <div>
       <dl>
-        <dt>Využívané datové sady</dt>
+        <dt>Utilized dataset</dt>
         {{#each dataset}}
         <dd>
           <a href="{{href}}" rel="nofollow noopener noreferrer" target="_blank">{{title}}</a>
