--- a/templates/cs/navigation.html
+++ b/templates/cs/navigation.html
@@ -24,29 +24,38 @@
           <a class="nav-link" href="/datov%C3%A1-kvalita">Datová kvalita</a>
         </li>
 
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="dropdown02" data-bs-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false" href="#">Národní katalog otevřených dat</a>
-          <div class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="/datov%C3%A9-sady">Datové sady</a>
-            <a class="dropdown-item" href="/poskytovatel%C3%A9">Poskytovatelé</a>
-            <a class="dropdown-item" href="/kl%C3%AD%C4%8Dov%C3%A1-slova">Klíčová slova</a>
-            <a class="dropdown-item" href="/lok%C3%A1ln%C3%AD-katalogy">Lokální katalogy</a>
-            <a class="dropdown-item" href="https://docs.google.com/forms/d/e/1FAIpQLSdUaVaCITtmHdTGxsU5xPvdzIygOA7wHHaotPRPAbglCF3mpw/viewform">Podnět
-              na data k otevření</a>
-          </div>
+        <li class="nav-item">
+          <a class="nav-link" href="/datov%C3%A9-sady">Datové sady</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="/datov%C3%A1-kvalita">Poskytovatelé</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link active" href="/datov%C3%A1-kvalita">Aplikace</a>
         </li>
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="dropdown01" data-bs-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false" href="#">Další informace</a>
+          <a class="nav-link dropdown-toggle" id="dropdown01" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">
+            Další
+          </a>
           <div class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="/informace/z%C3%A1klady-otev%C5%99en%C3%BDch-dat-pro-z%C3%A1jemce/">Pro
-              zájemce o otevírání dat</a>
-            <a class="dropdown-item"
-              href="https://opendata.gov.cz/informace:z%C3%A1klady-otev%C5%99en%C3%BDch-dat-pro-program%C3%A1tory">Pro
-              uživatele a programátory</a>
-            <a class="dropdown-item" href="https://opendata.gov.cz">Pro poskytovatele dat</a>
+            <a class="dropdown-item" href="/informace/z%C3%A1klady-otev%C5%99en%C3%BDch-dat-pro-z%C3%A1jemce/">
+              Pro zájemce o otevírání dat
+            </a>
+            <a class="dropdown-item" href="https://opendata.gov.cz/informace:z%C3%A1klady-otev%C5%99en%C3%BDch-dat-pro-program%C3%A1tory">
+              Pro uživatele a programátory
+            </a>
+            <a class="dropdown-item" href="https://opendata.gov.cz">
+              Pro poskytovatele dat
+            </a>
+            <a class="dropdown-item" href="/lok%C3%A1ln%C3%AD-katalogy">
+              Lokální katalogy
+            </a>
+            <a class="dropdown-item" href="https://docs.google.com/forms/d/e/1FAIpQLSdUaVaCITtmHdTGxsU5xPvdzIygOA7wHHaotPRPAbglCF3mpw/viewform">
+              Pro poskytovatele dat
+            </a>
           </div>
         </li>
 
