--- a/templates/en/navigation.html
+++ b/templates/en/navigation.html
@@ -13,37 +13,50 @@
       <ul class="navbar-nav ml-auto w-100 justify-content-end">
 
         <li class="nav-item">
-          <a class="nav-link" href="/news">News</a>
+          <a class="nav-link" href="/vzd%C4%9Bl%C3%A1v%C3%A1n%C3%AD">Education</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="/%C4%8Dl%C3%A1nky">Articles</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="/datov%C3%A1-kvalita">Data quality</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="/datasets">Datasets</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="/publishers">Publishers</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="/applications">Applications</a>
         </li>
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="dropdown02" data-bs-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false" href="#">National Open Data Catalog</a>
+          <a class="nav-link dropdown-toggle" id="dropdown01" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">
+            More
+          </a>
           <div class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="/datasets">Datasets</a>
-            <a class="dropdown-item" href="/publishers">Publishers</a>
-            <a class="dropdown-item" href="/keywords">Keywords</a>
-            <a class="dropdown-item" href="/local-catalogs">Local catalogs</a>
+            <a class="dropdown-item" href="informace/z%C3%A1klady-otev%C5%99en%C3%BDch-dat-pro-z%C3%A1jemce/">
+              About Open Data
+            </a>
+            <a class="dropdown-item" href="https://opendata.gov.cz/informace:z%C3%A1klady-otev%C5%99en%C3%BDch-dat-pro-program%C3%A1tory">
+              For users and programmers
+            </a>
+            <a class="dropdown-item" href="https://opendata.gov.cz">
+              Data publishers
+            </a>
+            <a class="dropdown-item" href="/local-catalogs">
+              Local catalogs
+            </a>
             <a class="dropdown-item" href="https://docs.google.com/forms/d/e/1FAIpQLSdUaVaCITtmHdTGxsU5xPvdzIygOA7wHHaotPRPAbglCF3mpw/viewform">
               Suggest data to be opened
-            </a>
+            </a>  
           </div>
-        </li>
-
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="dropdown01" data-bs-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false" href="#">More</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="https://opendata.gov.cz/informace:z%C3%A1klady-otev%C5%99en%C3%BDch-dat-pro-z%C3%A1jemce">
-                Interested in opening data (in Czech)
-              </a>
-              <a class="dropdown-item" href="https://opendata.gov.cz/informace:z%C3%A1klady-otev%C5%99en%C3%BDch-dat-pro-program%C3%A1tory">
-                Users and programmers (in Czech)
-              </a>
-              <a class="dropdown-item" href="https://opendata.gov.cz">
-                Data publishers (in Czech)
-              </a>
-            </div>
         </li>
 
         <li class="nav-item dropdown">
