--- a/templates/cs/application-detail.html
+++ b/templates/cs/application-detail.html
@@ -81,15 +81,17 @@
         </dl>
       </div>
     </div>
-    <div>
-      <dl>
-        <dt>Využívané datové sady</dt>
-        {{#each dataset}}
-        <dd>
-          <a href="{{href}}" rel="nofollow noopener noreferrer" target="_blank">{{title}}</a>
-        </dd>
-        {{/each}}
-      </dl>
+    <hr>
+    <h2>Využívané datové sady</h2>      
+    <br/>
+    <div>      
+      {{#each dataset}}
+      <div class="dataset">
+        <a href="{{href}}" rel="nofollow noopener noreferrer" target="_blank">
+          <h4>{{title}}</h4>
+        </a>
+      </div>
+      {{/each}}      
     </div>
   </div>
 
