--- a/templates/en/navigation.html
+++ b/templates/en/navigation.html
@@ -33,7 +33,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="/applications">Applications</a>
+          <a class="nav-link active" href="/applications">Applications</a>
         </li>
 
         <li class="nav-item dropdown">
