Remove self-link from navigation

--- a/templates/cs/navigation.html
+++ b/templates/cs/navigation.html
@@ -33,7 +33,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link active" href="/datov%C3%A1-kvalita">Aplikace</a>
+          <span class="nav-link active">Aplikace</span>
         </li>
 
         <li class="nav-item dropdown">
