--- a/templates/en/application-detail.html
+++ b/templates/en/application-detail.html
@@ -104,7 +104,7 @@
     <div>      
       {{#each dataset}}
       <div class="dataset">
-        <a href="{{href}}" rel="nofollow noopener noreferrer" target="_blank">
+        <a href="{{href}}" rel="nofollow noopener noreferrer">
           <h4>{{title}}</h4>
         </a>
       </div>
