Add dataset description

--- a/templates/cs/application-detail.html
+++ b/templates/cs/application-detail.html
@@ -107,8 +107,11 @@
         <a href="{{href}}" rel="nofollow noopener noreferrer">
           <h4>{{title}}</h4>
         </a>
+        <p>
+          {{description}}
+        </p>
       </div>
-      {{/each}}      
+      {{/each}}
     </div>
   </div>
 
