--- a/templates/en/application-list.html
+++ b/templates/en/application-list.html
@@ -55,11 +55,22 @@
           </form>
           {{/with}}
         </div>
-        <div class="m-md-1">
-          <div class="row">
-            <div class="col-12 col-md-9">
-              <h4>{{message.found}}</h4>
+        
+        <div class="m-md-1">          
+          <div style="display: flex; justify-content: space-between; padding-right: 8px;">
+            <h4>{{message.found}}</h4>
+            {{#with ordering}}
+            <div class="dropdown">              
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdown-ordering" data-bs-toggle="dropdown" aria-expanded="false">
+                {{active}}
+              </button>
+              <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdown-ordering">
+                {{#each items}}
+                <li><a class="dropdown-item" href="{{href}}">{{label}}</a></li>
+                {{/each}}
+              </ul>
             </div>
+            {{/with}}
           </div>
           <div>
             {{#each applications.items}}
