Add form link to footer

--- a/templates/en/footer.html
+++ b/templates/en/footer.html
@@ -1,51 +1,26 @@
 <footer class="footer py-4 mt-2 border-top">
     <div class="container">
         <div class="row">
-            <h2 class="visually-hidden" id="links-to-additional-information-on-open-data">
-                Links to additional information on open data
-                <a class="anchorjs-link" aria-label="Anchor" data-anchorjs-icon=""
-                    href="#links-to-additional-information-on-open-data"
-                    style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a>
-            </h2>
+            <h2 class="visually-hidden">Links to additional information on open data</h2>
             <div class="col-md-4">
-                <h3 class="h6" id="registration-in-nkod">
-                    Registration in NKOD
-                    <a class="anchorjs-link" aria-label="Anchor" data-anchorjs-icon="" href="#registration-in-nkod"
-                        style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a>
-                </h3>
+                <h3 class="h6" id="registration-in-nkod">Registration in NKOD</h3>
                 <ul>
                     <li><a href="/formul%C3%A1%C5%99/dataset-registration">Register a dataset</a></li>
                     <li><a href="/formul%C3%A1%C5%99/local-catalog-registration">Register a new local catalog</a></li>
+                    <li><a href="{{client.applicationLinkForm}}">Registrovat aplikaci využívající otevřená data</a></li>
                 </ul>
-                <h3 class="h6" id="contacts">
-                    Contacts
-                    <a class="anchorjs-link" aria-label="Anchor" data-anchorjs-icon="" href="#contacts"
-                        style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a>
-                </h3>
+                <h3 class="h6" id="contacts">Contacts</h3>
                 <ul>
                     <li>National Open Data Coordinator: Radka&nbsp;Domanská</li>
-                    <li>
-                        E-mail:
-                        <a href="mailto:otevrenadata@dia.gov.cz">otevrenadata@dia.gov.cz</a>
-                    </li>
-                    <li>
-                        Phone:
-                        <a href="tel:+420974817556">+420 974 817 556</a>
-                    </li>
-                    <li>
-                        twitter:
-                        <a href="https://twitter.com/otevrenadata">@otevrenadata</a>
-                    </li>
-                    <li>
-                        <a href="https://dia.gov.cz/">Digital and Information Agency</a>
-                    </li>
+                    <li>E-mail: <a href="mailto:otevrenadata@dia.gov.cz">otevrenadata@dia.gov.cz</a></li>
+                    <li>Phone:<a href="tel:+420974817556">+420 974 817 556</a></li>
+                    <li>twitter:<a href="https://twitter.com/otevrenadata">@otevrenadata</a></li>
+                    <li><a href="https://dia.gov.cz/">Digital and Information Agency</a></li>
                 </ul>
             </div>
             <div class="col-md-4">
                 <h3 class="h6" id="links">
                     Links
-                    <a class="anchorjs-link " aria-label="Anchor" data-anchorjs-icon="" href="#links"
-                        style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a>
                 </h3>
                 <ul>
                     <li><a href="/news">News archive</a></li>
@@ -53,18 +28,13 @@
                     <li><a href="/datasets">List of datasets</a></li>
                     <li><a href="/publishers">List of publishers</a></li>
                     <li><a href="/datov%C3%A1-kvalita">Data quality</a></li>
-                    <li><a
-                            href="https://docs.google.com/forms/d/e/1FAIpQLSdUaVaCITtmHdTGxsU5xPvdzIygOA7wHHaotPRPAbglCF3mpw/viewform">Suggest
-                            data to be opened</a></li>
+                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdUaVaCITtmHdTGxsU5xPvdzIygOA7wHHaotPRPAbglCF3mpw/viewform">Suggest data to be opened</a></li>
                     <li><a href="https://github.com/datagov-cz/data.gov.cz">Web on GitHub</a></li>
-                    <li><a href="/prohl%C3%A1%C5%A1en%C3%AD-o-p%C5%99%C3%ADstupnosti">Declaration of accessibility (in
-                            Czech)</a></li>
+                    <li><a href="/prohl%C3%A1%C5%A1en%C3%AD-o-p%C5%99%C3%ADstupnosti">Declaration of accessibility (in Czech)</a></li>
                 </ul>
             </div>
             <div class="col-md-4">
-                <h3 class="h6" id="acknowledgements">Acknowledgements<a class="anchorjs-link " aria-label="Anchor"
-                        data-anchorjs-icon="" href="#acknowledgements"
-                        style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a></h3>
+                <h3 class="h6" id="acknowledgements">Acknowledgements</h3>
                 <p>
                     This web was created thanks to the project OPZ number CZ.03.4.74/0.0/0.0/15_025/0004172 and is
                     further developed as part of the project OPZ number CZ.03.4.74/0.0/0.0/15_025/0013983. Increase in
