--- a/templates/en/footer.html
+++ b/templates/en/footer.html
@@ -7,7 +7,7 @@
                 <ul>
                     <li><a href="/formul%C3%A1%C5%99/dataset-registration">Register a dataset</a></li>
                     <li><a href="/formul%C3%A1%C5%99/local-catalog-registration">Register a new local catalog</a></li>
-                    <li><a href="{{client.applicationLinkForm}}">Registrovat aplikaci využívající otevřená data</a></li>
+                    <li><a href="{{client.applicationFormUrl}}">Registrovat aplikaci využívající otevřená data</a></li>
                 </ul>
                 <h3 class="h6" id="contacts">Contacts</h3>
                 <ul>
