--- a/templates/cs/footer.html
+++ b/templates/cs/footer.html
@@ -7,7 +7,7 @@
                 <ul>
                     <li><a href="/formul%C3%A1%C5%99/registrace-datov%C3%A9-sady">Registrovat novou datovou sadu</a></li>
                     <li><a href="/formul%C3%A1%C5%99/registrace-lok%C3%A1ln%C3%ADho-katalogu">Registrovat nový lokální katalog</a></li>
-                    <li><a href="{{client.applicationLinkForm}}">Registrovat aplikaci využívající otevřená data</a></li>
+                    <li><a href="{{client.applicationFormUrl}}">Registrovat aplikaci využívající otevřená data</a></li>
                 </ul>
                 <h3 class="h6">Kontakty</h3>
                 <ul>
