Update application detail
Add link to application, handle missing author, hide empty datasets.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -224,3 +224,7 @@ div.language-drop-down.dropdown-menu.lang-menu.show {
 .dataset a:hover {
 	text-decoration: underline;
 }
+
+.inline {
+	display:inline;
+}
