--- a/templates/cs/application-list.html
+++ b/templates/cs/application-list.html
@@ -38,7 +38,7 @@
       <div class="col-12 col-md-9">
         <div class="m-md-1">
           {{#with search}}
-          <form style="padding: 0.5rem; margin-bottom: 1rem;" action="{{link}}" id="search">
+          <form style="padding: 0.5rem; margin-bottom: 1rem;" action="?" id="search">
             <div class="input-group">
               <span class="input-group-text">
                 <i class="bi-search"></i>
