--- a/templates/cs/navigation.html
+++ b/templates/cs/navigation.html
@@ -33,7 +33,11 @@
         </li>
 
         <li class="nav-item">
-          <span class="nav-link active">Aplikace</span>
+          {{#if navigation.showApplicationLink}}
+            <a class="nav-link active" href="/aplikace">Aplikace</a>
+          {{else}}
+            <span class="nav-link active">Aplikace</span>
+          {{/if}}
         </li>
 
         <li class="nav-item dropdown">
