--- a/templates/en/navigation.html
+++ b/templates/en/navigation.html
@@ -33,7 +33,11 @@
         </li>
 
         <li class="nav-item">
-          <span class="nav-link active">Applications</span>
+          {{#if navigation.showApplicationLink}}
+            <a class="nav-link active" href="/applications">Applications</a>
+          {{else}}
+            <span class="nav-link active">Applications</span>
+          {{/if}}
         </li>
 
         <li class="nav-item dropdown">
