--- a/templates/cs/navigation.html
+++ b/templates/cs/navigation.html
@@ -29,7 +29,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="/datov%C3%A1-kvalita">Poskytovatelé</a>
+          <a class="nav-link" href="/poskytovatel%C3%A9">Poskytovatelé</a>
         </li>
 
         <li class="nav-item">
