--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -180,11 +180,11 @@ div.language-drop-down.dropdown-menu.lang-menu.show {
 	color: var(--list-group-action-active);
 }
 
-.application>a {
+.document>a {
 	text-decoration: none;
 }
 
-.application>a:hover {
+.document>a:hover {
 	text-decoration: underline;
 }
 
@@ -209,6 +209,12 @@ div.language-drop-down.dropdown-menu.lang-menu.show {
 
 #search  span.input-group-text {
 	font-weight: bold;
+}
+
+.document .badge {
+	background-color: var(--color-background-footer)!important;
+	border: 1px solid var(--color-text-accent);
+	color: var(--color-text-default)!important;
 }
 
 /* Detail. */
