--- a/server/component/navigation-en.html
+++ b/server/component/navigation-en.html
@@ -40,14 +40,6 @@
           {{/if}}
         </li>
 
-        <li class="nav-item">
-          {{#if suggestionsActive}}
-          <span class="nav-link active">Suggestions for datasets to be opened</span>
-          {{else}}
-          <a class="nav-link" href="/suggestions-for-datasets-to-be-opened">Suggestions for datasets to be opened</a>
-          {{/if}}
-        </li>
-
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" id="dropdown01" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">
             More
@@ -67,7 +59,11 @@
             </a>
             <a class="dropdown-item" href="https://docs.google.com/forms/d/e/1FAIpQLSdUaVaCITtmHdTGxsU5xPvdzIygOA7wHHaotPRPAbglCF3mpw/viewform">
               Suggest data to be opened
-            </a>  
+            </a>
+            <a class="dropdown-item" href="/suggestions-for-datasets-to-be-opened">
+              Suggestions for datasets to be opened
+            </a>
+            </li>
           </div>
         </li>
 
