--- a/server/component/navigation-cs.html
+++ b/server/component/navigation-cs.html
@@ -40,14 +40,6 @@
           {{/if}}
         </li>
 
-        <li class="nav-item">
-          {{#if suggestionsActive}}
-          <span class="nav-link active">Návrhy na datové sady k otevření</span>
-          {{else}}
-          <a class="nav-link" href="/návrhy-na-datové-sady-k-otevření">Návrhy na datové sady k otevření</a>
-          {{/if}}
-        </li>
-
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" id="dropdown01" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">
             Další
@@ -66,7 +58,10 @@
               Lokální katalogy
             </a>
             <a class="dropdown-item" href="https://docs.google.com/forms/d/e/1FAIpQLSdUaVaCITtmHdTGxsU5xPvdzIygOA7wHHaotPRPAbglCF3mpw/viewform">
-              Pro poskytovatele dat
+              Navrh datové sady k otevření
+            </a>
+            <a class="dropdown-item" href="/návrhy-na-datové-sady-k-otevření">
+              Návrhy na datové sady k otevření
             </a>
           </div>
         </li>
