Update navigation and footer
Move suggestions to footer and make them configurable.

--- a/server/component/footer-cs.html
+++ b/server/component/footer-cs.html
@@ -7,7 +7,8 @@
                 <ul>
                     <li><a href="/formul%C3%A1%C5%99/registrace-datov%C3%A9-sady">Registrovat novou datovou sadu</a></li>
                     <li><a href="/formul%C3%A1%C5%99/registrace-lok%C3%A1ln%C3%ADho-katalogu">Registrovat nový lokální katalog</a></li>
-                    <li><a href="{{registrationFormUrl}}">Registrovat aplikaci využívající otevřená data</a></li>
+                    <li><a href="{{applicationRegistrationFormUrl}}">Registrovat aplikaci využívající otevřená data</a></li>
+                    <li><a href="{{suggestionRegistrationFormUrl}}">Registrovat návrh datové sady k otevření</a></li>
                 </ul>
                 <h3 class="h6">Kontakty</h3>
                 <ul>
