--- a/server/component/footer-en.html
+++ b/server/component/footer-en.html
@@ -7,7 +7,8 @@
                 <ul>
                     <li><a href="/formul%C3%A1%C5%99/dataset-registration">Register a dataset</a></li>
                     <li><a href="/formul%C3%A1%C5%99/local-catalog-registration">Register a new local catalog</a></li>
-                    <li><a href="{{registrationFormUrl}}">Registrovat aplikaci využívající otevřená data</a></li>
+                    <li><a href="{{applicationRegistrationFormUrl}}">Register an application using open data</a></li>
+                    <li><a href="{{suggestionRegistrationFormUrl}}">Suggest data to be opened</a></li>
                 </ul>
                 <h3 class="h6" id="contacts">Contacts</h3>
                 <ul>
