Design system preview

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,237 +1,18 @@
-:root {
-	--color-background: white;
-	--color-background-footer: white;
-	--color-text-default: black;
-	--color-text-inverted: white;
-	--color-text-accent: #057fa5;
-	--color-text-accent-inverted: black;
-	--color-base: #057fa5;
-	--color-border: rgba(0, 0, 0, 0.125);
-
-	--list-group-action-active: #111;
-	--list-group-action-active-bg: #e9ecef;
+.list {
+ & .list-item {
+    & a {
+      text-decoration: none;
+      & h3 {
+        display: flex; 
+        justify-content: space-between;
+        padding: 0.25rem;
+      }
+    }
+  }
 }
 
-@media (prefers-color-scheme: dark) {
-	:root {
-		--color-background: #111;
-		--color-background-footer: #222;
-		--color-text-default: white;
-		--color-text-inverted: #222;
-		--color-text-accent: #3bb5dc;
-		--color-text-accent-inverted: white;
-		--color-base: #057fa544;
-		--color-border: rgba(255, 255, 255, 0.125);
-
-		--list-group-action-active: #111;
-		--list-group-action-active-bg: #3bb5dc;
-	}
-}
-
-a:hover {
-	border-color: var(--color-text-accent-inverted);
-}
-
-hr {
-	border: 1px dotted var(--color-text-accent);
-}
-
-.navbar-light .navbar-nav .show>.nav-link {
-	color: var(--color-text-accent-inverted);
-}
-
-::-webkit-scrollbar {
-	background-color: #1c1e1f;
-	color: #c5c1b9;
-}
-
-::-webkit-scrollbar-corner {
-	background-color: #181a1b;
-}
-
-::-webkit-scrollbar-thumb {
-	background-color: #2a2c2e;
-}
-
-::selection {
-	background-color: #3bb5dc;
-	color: #ffffff;
-}
-
-.card {
-	border-color: var(--color-base);
-}
-
-.navbar-light .navbar-toggler-icon {
-	background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'><path stroke='gray' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>");
-}
-
-.navbar-light .navbar-toggler {
-	border-color: gray;
-}
-
-pre {
-	color: var(--color-text-accent);
-	background-color: var(--color-background-footer);
-}
-
-body,
-.card-body,
-.list-group-item,
-div.card {
-	color: var(--color-text-default);
-	background-color: var(--color-background);
-}
-
-input.form-control {
-	background-color: var(--color-background-footer);
-	color: var(--color-text-default);
-}
-
-footer,
-.card-header,
-.card-footer {
-	background-color: var(--color-background-footer);
-}
-
-div.dropdown-menu.show {
-	background-color: var(--color-background);
-}
-
-.navbar-light .navbar-nav .nav-link:hover,
-a:hover,
-.navbar-light .navbar-nav .nav-link.active {
-	color: var(--color-text-accent-inverted);
-}
-
-a,
-a.dropdown-item,
-a.nav-item:focus,
-.navbar-light .navbar-nav .nav-link,
-.navbar-light .navbar-nav .nav-link:focus {
-	color: var(--color-text-accent);
-}
-
-a.btn.btn-primary,
-button.btn.btn-primary {
-	background-color: var(--color-text-accent);
-	border-color: var(--color-text-inverted);
-	color: var(--color-text-inverted);
-}
-
-a.btn.btn-primary:hover,
-button.btn.btn-primary:hover,
-a.dropdown-item:hover {
-	background-color: var(--color-text-inverted);
-	border-color: var(--color-base);
-	color: var(--color-text-accent-inverted);
-}
-
-.btn-secondary {
-	background-color: var(--color-text-inverted);
-	border-color: var(--color-text-accent);
-	color: var(--color-text-accent);
-}
-
-.btn-secondary:hover {
-	background-color: var(--color-text-accent);
-	border-color: var(--color-text-inverted);
-	color: var(--color-text-inverted);
-}
-
-ol>li>ol>li {
-	list-style-type: lower-alpha;
-}
-
-dl>dd>ol>li {
-	list-style-type: lower-alpha;
-}
-
-ol>li>ol>li>ol>li {
-	list-style-type: lower-roman;
-}
-
-div.language-drop-down.dropdown-menu.lang-menu.show {
-	min-width: 0;
-}
-
-.facet h3 {
-	color: var(--color-text-default)
-}
-
-.facet li {
-	border-color: var(--color-border);
-	padding: 0;
-	display: flex;
-}
-
-.facet li a {
-	color: var(--color-text-default);
-	text-decoration: none;
-	padding: 8px 16px;
-	flex-grow: 1;
-}
-
-.facet li:hover, .facet li.active{		
-	background-color: var(--list-group-action-active-bg);
-	border-color: var(--list-group-action-active-bg);
-}
-
-.facet li:hover a {
-	color: var(--list-group-action-active);
-}
-
-.document>a {
-	text-decoration: none;
-}
-
-.document>a:hover {
-	text-decoration: underline;
-}
-
-#search .rbt {
-	outline: none;
-	position: relative;
-	flex-grow: 1;
-	margin-right: 1rem;
-}
-
-#search .rbt>div {
-	display: flex;
-	flex: 1 1 0%;
-	height: 100%;
-	position: relative;
-}
-
-#search input {
-	border-radius: 0;
-}
-
-
-#search  span.input-group-text {
-	font-weight: bold;
-}
-
-.document .badge {
-	background-color: var(--color-background-footer)!important;
-	border: 1px solid var(--color-text-accent);
-	color: var(--color-text-default)!important;
-}
-
-/* Detail. */
-
-.dataset {
-	margin-bottom: 1rem;
-}
-
-.dataset a {
-	text-decoration: none;
-}
-
-.dataset a:hover {
-	text-decoration: underline;
-}
-
-.inline {
-	display:inline;
+.application-detail {
+  dt {
+    font-weight: 900;
+  }
 }
