--- a/server/component/head.html
+++ b/server/component/head.html
@@ -17,14 +17,16 @@
 <link rel="icon" type="image/png" sizes="96x96" href="/aplikace/assets/images/favicons/favicon-96x96.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/aplikace/assets/images/favicons/favicon-16x16.png">
 <!-- External resources. -->
-<link rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"   
-  integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-  crossorigin="anonymous">
-<link rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" 
-  crossorigin="anonymous"></script>
+<script>
+  window.GOV_DS_CONFIG = {
+    "canValidateWcagOnRender": true,
+    "iconsPath": "/design-system/assets/icons"
+  };
+</script>
+<link rel="stylesheet" href="./design-system/assets/styles/critical.css">
+<link rel="stylesheet" href="./design-system/build/core.css">
+<link rel="stylesheet" href="./design-system/assets/fonts/roboto.css">
+<script type="module" src="./design-system/build/core.esm.js"></script>
+<script nomodule src="./design-system/build/core.js"></script>
 <!-- Local resources. -->
 <link type="text/css" rel="stylesheet" href="/aplikace/assets/css/main.css">
