--- a/server/component/navigation-cs.html
+++ b/server/component/navigation-cs.html
@@ -1,79 +1,76 @@
-<nav class="navbar navbar-expand-lg navbar-light">
-  <div class="container">
-    <a href="/" class="navbar-brand d-flex mr-auto">
-      <img width="174" height="30" class="d-inline-block align-top" src="/aplikace/assets/images/logo.png" alt="Otevřená data">
-    </a>
-    <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse"
-      data-bs-target="#collapsingNavbar" aria-controls="collapsingNavbar" aria-expanded="false"
-      aria-label="Zobrazení navigace">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="collapsingNavbar">
-      <ul class="navbar-nav ml-auto w-100 justify-content-end">
-
-        <li class="nav-item">
-          <a class="nav-link" href="/vzd%C4%9Bl%C3%A1v%C3%A1n%C3%AD">Vzdělávání</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="/%C4%8Dl%C3%A1nky">Články</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="/datov%C3%A1-kvalita">Datová kvalita</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="/datov%C3%A9-sady">Datové sady</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="/poskytovatel%C3%A9">Poskytovatelé</a>
-        </li>
-
-        <li class="nav-item">
-          {{#if applicationsActive}}
-          <span class="nav-link active">Aplikace</span>
-          {{else}}
-          <a class="nav-link" href="/aplikace">Aplikace</a>
-          {{/if}}
-        </li>
-
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="dropdown01" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">
-            Další
-          </a>
-          <div class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="/informace/z%C3%A1klady-otev%C5%99en%C3%BDch-dat-pro-z%C3%A1jemce/">
-              Pro zájemce o otevírání dat
-            </a>
-            <a class="dropdown-item" href="https://opendata.gov.cz/informace:z%C3%A1klady-otev%C5%99en%C3%BDch-dat-pro-program%C3%A1tory">
-              Pro uživatele a programátory
-            </a>
-            <a class="dropdown-item" href="https://opendata.gov.cz">
-              Pro poskytovatele dat
-            </a>
-            <a class="dropdown-item" href="/lok%C3%A1ln%C3%AD-katalogy">
-              Lokální katalogy
-            </a>
-            <a class="dropdown-item" href="/návrhy-na-datové-sady-k-otevření">
-              Návrhy na datové sady k otevření
-            </a>
-          </div>
-        </li>
-
-        <li class="nav-item dropdown">
-          <a data-bs-toggle="dropdown" aria-haspopup="true" href="#" class="dropdown-toggle nav-link" aria-expanded="false">
-            <img src="/aplikace/assets/images/flag-cs.svg" alt="Čeština" style="width: 1.3rem;">
-          </a>
-          <div tabindex="-1" aria-hidden="true" role="menu" class="language-drop-down dropdown-menu lang-menu">
-            <a href="{{en}}" class="en dropdown-item" title="English">
-              <img src="/aplikace/assets/images/flag-en.svg" alt="English" style="width: 1.3rem;"></a>
-          </div>
-        </li>
-
-      </ul>
-    </div>
-  </div>
-</nav>
+<header class="gov-header">
+  <gov-container>
+    <gov-branding>
+      <h4>Portál o datech</h4>
+      <div>
+        <gov-form-search name="test-me-c" variant="primary">
+          <gov-form-input slot="input" id="search" name="test-me" size="m" placeholder="Co hledáte"></gov-form-input>
+          <gov-button slot="button" variant="primary" size="s">
+            Hledat
+          </gov-button>
+        </gov-form-search>
+        <gov-form-select wcag-label="jazyk" size="m" value="cs">
+          <option value="cs">Čeština</option>
+          <option value="en">English</option>
+        </gov-form-select>
+      </div>
+    </gov-branding>
+    <script src="/aplikace/assets/js/text-search.js"></script>
+    <gov-nav wcag-label="Hlavní navigace">
+      <gov-nav-item href="/vzd%C4%9Bl%C3%A1v%C3%A1n%C3%AD">
+        Vzdělávání
+      </gov-nav-item>
+      <gov-nav-item href="/%C4%8Dl%C3%A1nky">
+        Články
+      </gov-nav-item>
+      <gov-nav-item href="/datov%C3%A1-kvalita">
+        Datová kvalita
+      </gov-nav-item>
+      <gov-nav-item href="/datov%C3%A9-sady">
+        Datové sady
+      </gov-nav-item>
+      <gov-nav-item href="/aplikace">
+        Aplikace
+      </gov-nav-item>
+      <gov-nav-dropdown>
+        <span slot="label">Další</span>
+        <ul slot="dropdown">
+          <li>
+            <a href="/z%C3%A1klady-otev%C5%99en%C3%BDch-dat-pro-z%C3%A1jemce/">Pro zájemce o otevírání dat</a>
+          </li>
+          <li>
+            <a href="https://opendata.gov.cz/informace:z%C3%A1klady-otev%C5%99en%C3%BDch-dat-pro-program%C3%A1tory">Pro
+              uživatele a programátory</a>
+          </li>
+          <li>
+            <a href="https://opendata.gov.cz/">Pro poskytovatele dat</a>
+          </li>
+          <li>
+            <a href="/lok%C3%A1ln%C3%AD-katalogy">Lokální katalogy</a>
+          </li>
+          <li>
+            <a href="/n%C3%A1vrhy-na-datov%C3%A9-sady-k-otev%C5%99en%C3%AD">Návrhy na datové sady k otevření</a>
+          </li>
+        </ul>
+      </gov-nav-dropdown>
+    </gov-nav>
+  </gov-container>
+</header>
+<gov-container>
+  <gov-spacer size="xs" breakpoint="sm"></gov-spacer>
+  <gov-breadcrumbs wcag-label="Drobečková navigace pro stránku Czech POINT">
+    <ul>
+      <li>
+        <a href="/">Domů</a>
+      </li>
+      <li>
+        <gov-icon name="chevron-right"></gov-icon>
+        <a href="#">Portál o datech</a>
+      </li>
+      <li>
+        <gov-icon name="chevron-right"></gov-icon>
+        <strong>Aplikace</strong>
+      </li>
+    </ul>
+  </gov-breadcrumbs>
+</gov-container>
