--- a/server/component/pagination.html
+++ b/server/component/pagination.html
@@ -1,19 +1,18 @@
-{{#if visible}}
-<nav aria-label="Page navigation example">
-  <ul class="pagination">
-    {{#each before}}
-    <li class="page-item">
-      <a class="page-link" href="{{url}}">{{label}}</a>
-    </li>
-    {{/each}}
-    <li class="page-item active">
-      <a class="page-link" href="#">{{active}}</a>
-    </li>
-    {{#each after}}
-    <li class="page-item">
-      <a class="page-link" href="{{url}}">{{label}}</a>
-    </li>
-    {{/each}}
-  </ul>
-</nav>
-{{/if}}
+<gov-grid>
+  <gov-grid-item size-sm="12/12" size-md="10/12">
+    {{#if visible}}
+    <gov-pagination total="{{total}}" current="{{currentPage}}" page-size="{{pageSize}}"
+      wcag-label="Stránkování pro sekci dokumenty" 
+      wcag-select-label="Vybrat stránku">
+    </gov-pagination>
+    {{/if}}
+  </gov-grid-item>
+  <gov-grid-item size-sm="4/12" size-md="2/12">
+    <gov-form-select wcag-label="Velikost stránky" value="{{pageSize}}">
+      <option value="25">25</option>
+      <option value="50">50</option>
+      <option value="75">75</option>
+      <option value="100">100</option>
+    </gov-form-select>
+  </gov-grid-item>
+</gov-grid>
