--- a/server/component/search-cs.html
+++ b/server/component/search-cs.html
@@ -1,15 +1,10 @@
-<form style="padding: 0.5rem; margin-bottom: 1rem;" action="?" id="search" data-url="{{url}}" data-query-name="{{query-name}}">
-  <div class="input-group">
-    <span class="input-group-text">
-      <i class="bi-search"></i>
-    </span>
-    <div class="rbt" tabindex="-1">
-      <div>
-        <input autocomplete="off" type="text" aria-autocomplete="both" aria-expanded="false" class="rbt-input-main form-control rbt-input" value="{{value}}" name="query">
-      </div>
+<gov-accordion size="xs">
+  <gov-accordion-item>
+    <h3 slot="label">Rozšířené vyhledávání</h3>
+    <div>
+      <gov-button slot="button" variant="primary" size="m">
+        Smaž filtry
+      </gov-button>
     </div>
-    <button type="submit" class="btn btn-primary">
-      Vyhledat
-    </button>
-  </div>
-</form>
+  </gov-accordion-item>
+</gov-accordion>
