Moving DAV and migrating to design-system
Add local catalog list view, publisher list, dataset-list, and partial dataset-detail.
Update data sources and other views, proceed with migration towards gov-design-system.

--- a/server/component/navigation-cs.html
+++ b/server/component/navigation-cs.html
@@ -1,7 +1,9 @@
 <header class="gov-header">
   <gov-container>
     <gov-branding>
-      <h4>Portál o datech</h4>
+      <h1>
+        <a href="/">Portál o datech</a>
+      </h1>
       <div>
         <gov-form-search name="test-me-c" variant="primary">
           <gov-form-input slot="input" id="search" name="test-me" size="m" placeholder="Co hledáte"></gov-form-input>
@@ -56,21 +58,4 @@
     </gov-nav>
   </gov-container>
 </header>
-<gov-container>
-  <gov-spacer size="xs" breakpoint="sm"></gov-spacer>
-  <gov-breadcrumbs wcag-label="Drobečková navigace pro stránku Czech POINT">
-    <ul>
-      <li>
-        <a href="/">Domů</a>
-      </li>
-      <li>
-        <gov-icon name="chevron-right"></gov-icon>
-        <a href="#">Portál o datech</a>
-      </li>
-      <li>
-        <gov-icon name="chevron-right"></gov-icon>
-        <strong>Aplikace</strong>
-      </li>
-    </ul>
-  </gov-breadcrumbs>
 </gov-container>
