--- a/server/component/search-en.html
+++ b/server/component/search-en.html
@@ -1,15 +1,3 @@
-<form style="padding: 0.5rem; margin-bottom: 1rem;" action="?" id="search" data-url="{{url}}" data-query-name="{{query-name}}">
-  <div class="input-group">
-    <span class="input-group-text">
-      <i class="bi-search"></i>
-    </span>
-    <div class="rbt" tabindex="-1">
-      <div>
-        <input autocomplete="off" type="text" aria-autocomplete="both" aria-expanded="false" class="rbt-input-main form-control rbt-input" value="{{value}}" name="query">
-      </div>
-    </div>
-    <button type="submit" class="btn btn-primary">
-      Search
-    </button>
-  </div>
-</form>
+<gov-accordion size="xs">
+  <!-- TODO -->
+</gov-accordion>
