--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,8 @@
 .list {
- & .list-item {
+  & .list-item {
     & a {
       text-decoration: none;
+
       & h3 {
         display: flex;
         justify-content: space-between;
@@ -21,4 +22,43 @@
 
 .danger {
   color: #dc3545
+}
+
+.distribution {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content:  space-evenly;
+  &>div {
+    width: 48%;
+    padding: .25rem;
+    border: 1px solid black;
+    margin: 0 .25rem;
+  }
+}
+
+.distribution .distribution-column {
+  display: flex;
+  flex-direction: row;
+
+  &>div {
+    width: 50%;
+    margin: .25rem;
+
+    >h5 {
+      padding: .25rem;
+      border: 1px solid black;
+    }
+
+    >ul {
+      padding: 0;
+      list-style-type: none;
+    }
+
+    >ul>li {
+      padding: .25rem;
+      border: 1px solid black;
+      margin-top: -1px;
+    }
+  }
 }
