Move search from header
Add query search implementation.

--- a/server/component/navigation-cs.html
+++ b/server/component/navigation-cs.html
@@ -5,19 +5,12 @@
         <a href="/">Portál o datech</a>
       </h1>
       <div>
-        <gov-form-search name="test-me-c" variant="primary">
-          <gov-form-input slot="input" id="search" name="test-me" size="m" placeholder="Co hledáte"></gov-form-input>
-          <gov-button slot="button" variant="primary" size="s">
-            Hledat
-          </gov-button>
-        </gov-form-search>
         <gov-form-select wcag-label="jazyk" size="m" value="cs">
           <option value="cs">Čeština</option>
           <option value="en">English</option>
         </gov-form-select>
       </div>
     </gov-branding>
-    <script src="/aplikace/assets/js/text-search.js"></script>
     <gov-nav wcag-label="Hlavní navigace">
       <gov-nav-item href="/vzd%C4%9Bl%C3%A1v%C3%A1n%C3%AD">
         Vzdělávání
@@ -41,8 +34,9 @@
             <a href="/z%C3%A1klady-otev%C5%99en%C3%BDch-dat-pro-z%C3%A1jemce/">Pro zájemce o otevírání dat</a>
           </li>
           <li>
-            <a href="https://opendata.gov.cz/informace:z%C3%A1klady-otev%C5%99en%C3%BDch-dat-pro-program%C3%A1tory">Pro
-              uživatele a programátory</a>
+            <a href="https://opendata.gov.cz/informace:z%C3%A1klady-otev%C5%99en%C3%BDch-dat-pro-program%C3%A1tory">
+              Pro uživatele a programátory
+            </a>
           </li>
           <li>
             <a href="https://opendata.gov.cz/">Pro poskytovatele dat</a>
