--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,7 +28,8 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content:  space-evenly;
+  justify-content: space-evenly;
+
   &>div {
     width: 48%;
     padding: .25rem;
@@ -60,5 +61,44 @@
       border: 1px solid black;
       margin-top: -1px;
     }
+  }
+}
+
+.extended-search{
+
+  &>div.time {
+    display: flex;
+    flex-flow: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    &>div  {
+      display: flex;
+      flex-flow: row;
+      flex-wrap: wrap;
+      gap: 1em;
+      align-items: center;
+      margin-bottom: 1rem;
+
+      gov-form-input {
+        width: 10em;
+      }
+    }
+  }
+
+  &>div.vdf {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+  }
+
+  .flex-space-between {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .flex-justify-end {
+    display: flex;
+    justify-content: end;
   }
 }
